tests/errors/macro/macro_long_comment_without_begin.c
int main()
{
	*/	// "*/" найден вне комментария

	return 0;
}
